--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ permalink: /:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
-pygments: true
+#pygments: true
 markdown: redcarpet
 paginate: 5
 
@@ -113,3 +113,5 @@ markdown: rdiscount
 rdiscount:
    extensions:
      - footnotes
+
+gems: [jekyll-paginate]
