--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ date_format: '%Y-%m-%d'
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url:
 baseurl:
-permalink: pretty
+permalink: /:year/:month/:day/:title
 
 # Pagination
 paginate: 10
@@ -119,7 +119,7 @@ menu:
   home: /
   #categories: /categories/
   #about: /about/
-  archives: /archives/
+  #archives: /archives/
   tags: /tags/
   #sitemap: /sitemap.xml
   #commonweal: /404.html
@@ -314,6 +314,7 @@ post_meta:
   created_at: true
   updated_at: false
   categories: true
+
 
 # Post wordcount display settings
 post_wordcount:
