--- a/_config.yml
+++ b/_config.yml
@@ -354,7 +354,7 @@ custom_logo:
 # Available value:
 #    normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: normal
+highlight_theme: night eighties
 
 
 # ---------------------------------------------------------------
@@ -381,8 +381,8 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: linbo
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
